fixed FAQ spacing to be consistent with rest of site

--- a/faq.css
+++ b/faq.css
@@ -1,34 +1,32 @@
-.main-content {
-  padding-top: 90px;
-  height: 300px;
+main {
+  margin-top: 10vh !important;
+  height: 20vh;
   display: flex;
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
 }
 
 .faq-header {
-  margin-top: 50px;
-  margin-left: 10%;
+  margin-top: 10vh;
+  margin-left: 10vw%;
 }
 
 .faq-question {
-  margin-left: 10%;
-  font-size: 18px;
-  padding: 10px 0;
+  margin-top: 2vh;
+  margin-left: 10vw%;
 }
 
 .faq-question .question {
-  padding: 10px 0;
-  font-size: 22px;
+  font-size: 20px;
   cursor: pointer;
   display: block;
-  height: 50px;
+  height: 5vh;
 }
 
 .answer {
   display: none;
   font-size: 16px;
-  line-height: 125%;
+  line-height: 1.7;
 }
 
 .question .text, .glyphicon {
@@ -36,15 +34,19 @@
 }
 
 .glyphicon {
-  padding-left: 10px;
+  padding-top: 7px;
+  padding-left: 7px;
 }
 
 h2 {
   color: #f2b124;
 }
 
+#container_blue {
+  padding-top: 0 !important;
+  padding-bottom: 10vh !important;
+}
+
 @media (max-width: 990px) {
-  .main-content {
-    padding-top: 180px;
-  }
+
 }
